# VueCrawJUD

./: .dockerignore  .editorconfig  .env.vault  .gitignore  .pre-commit-config.yaml  .prettierrc.json  Compose.yml  Dockerfile  README.md  back.Dockerfile  components.d.ts  compose.yml  env.d.ts  eslint.config.ts  forge.config.js  forge.config.ts  front.Dockerfile  index.html  package-lock.json  package.json  poetry.toml  pyproject.toml  ruff.toml  to_json.py  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.main.js  vite.config.preload.js  vite.config.renderer.js  vite.config.ts  vite.preload.config.js  vite.renderer.config.ts  vitepush.Dockerfile
.github/: .copilot-commit-message-instructions.md  .copilot-test-maker.md  copilot-commit-message-instructions.md  pull_request_template.md
.github/workflows/: pre-commit.yml
@types/: index.d.ts
api/: __init__.py  __main__.py  config.py  database.py  middleware.py
api/logs/: __init__.py
api/models/: __init__.py  bots.py  export.xlsx  schedule.py  users.py
api/routes/: __init__.py  auth.py  credentials.py  dashboard.py  webhook.py
client/main/: util.ts
client/plugins/: axios.ts
client/scss/: custom_navbar.scss
client/src/: App.vue  main.ts  renderer.ts
crawjud/: __init__.py  __main__.py  app_structure.md
crawjud/bot/: __init__.py  class_thead.py
crawjud/core/: __init__.py  config.py  configurator.py  database.py  extensions.py  main.py  routing.py
crawjud/custom/: __init__.py  fields.py
crawjud/decorators/: checks.py  login_wrap.py
crawjud/forms/: __init__.py  auth.py  credentials.py  validators.py
crawjud/logs/: __init__.py  handlers.py
crawjud/manager/: __init__.py  menu.py  runner.py
crawjud/misc/: __init__.py  checkout.py
crawjud/models/: __init__.py  bots.py  schedule.py  secondaries.py  users.py
crawjud/routes/: __init__.py  webhook.py
crawjud/utils/: __init__.py  check_cors.py  gcs_mgmt.py  gen_seed.py  get_location.py  make_celery.py  mod_mgmt.py  thead_asgi.py  watch.py
decorators/: __init__.py  jwt.py
logs/: __init__.py
old/: main.ts
old/components/: NavLogin.vue  TableComponent.vue
old/router/: index.ts
server/: __init__.py  __main__.py  config.py  database.py  security.py
server/core/: __init__.py  config.py  configurator.py  extensions.py  main.py  routing.py  security.py  watch.py
server/custom/: __init__.py  fields.py
server/decorators/: __init__.py  checks.py
server/forms/: auth.py
server/logs/: __init__.py
server/manager/: runner.py
server/misc/: __init__.py
server/models/: bots.py  export.xlsx  users.py
server/routes/: __init__.py  webhook.py
server/types/: __init__.py
server/utils/: make_celery.py
src/: App.vue  main.ts  renderer.ts
src/@types/: CustomDTType.d.ts  FormBot.d.ts  FormCredentials.d.ts  FormStateClient.d.ts  LogTypes.d.ts  LoginResponse.d.ts  ResponseError.d.ts  ResponseFile.d.ts  ResponsesAPI.d.ts  app.d.ts  env.d.ts  service.d.ts  storeMap.d.ts
src/assets/: base.css  main.css  main.css.map  main.module.css  main.module.css.map  main.scss
src/components/: FooterView.vue  HeaderView.vue  MainView.vue  ModalMessage.vue  NavLogin.vue  SideBarComponent.vue  SidebarView.vue  TableComponent.vue
src/ipc/: CredentialsBehavior.ts  FileBhavior.ts  WinBehavior.ts  index.ts
src/main/: components.ts  configs.ts  main.ts  preload.js  preload.ts  util.ts
src/models/: userModel.ts
src/plugins/: auth.ts  (+9 more)
types/: index.d.ts
(+418 files in other folders)
